# miden-anonymizer

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
examples/: pta_single_hop_demo.rs
masm/account_components/auth/: vault_empty.masm
masm/standards/notes/: p2id_forward.masm
src/: cli.rs  errors.rs  lib.rs  library.rs
src/account/: auth.rs  mod.rs  pta.rs
src/note/: mod.rs  p2id_forward.rs
tests/: auth_invariants.rs  single_hop.rs  testnet.rs
