[package]
name         = "miden-anonymizer"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.90"
description  = "Pass-through account (PTA) on Miden: break the on-chain linkage between payment sender and receiver"
license      = "MIT"

# Pinned to the 0.14 series because that is what Miden testnet is running.
# Bump together with miden-client when testnet upgrades.

[features]
default = ["std"]
std     = ["miden-protocol/std", "miden-standards/std", "miden-assembly/std"]
testing = ["dep:rand", "miden-protocol/testing", "miden-standards/testing"]

[dependencies]
miden-assembly  = { version = "0.22",   default-features = false }
miden-processor = { version = "0.22",   default-features = false }
miden-protocol  = { version = "0.14.5", default-features = false }
miden-standards = { version = "0.14.5", default-features = false }
rand            = { version = "0.9", optional = true, default-features = false }
thiserror       = { version = "2.0", default-features = false }

[build-dependencies]
fs-err          = "3"
miden-assembly  = { version = "0.22" }
miden-protocol  = { version = "0.14.5" }
miden-standards = { version = "0.14.5" }
regex           = "1"
walkdir         = "2.5"

[dev-dependencies]
anyhow                   = "1"
miden-anonymizer         = { path = ".", features = ["testing"] }
miden-client             = { version = "0.14", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.14" }
miden-protocol           = { version = "0.14.5", features = ["testing"] }
miden-testing            = { version = "0.14.5" }
rand                     = { version = "0.9" }
rand_chacha              = { version = "0.9" }
tokio                    = { version = "1.48", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "pta_single_hop_demo"
path = "examples/pta_single_hop_demo.rs"
